--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,153 @@
-.App {
-  text-align: center;
+ .container{
+    text-align: center;
+    font-size: 1.8em;
+    font-family: monospace;
+    padding: 0.7em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.keyboard {
+      text-align: center;
+      font-size: 14px;
+      font-family: sans-serif;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .keyboardRow {
+      display: inline-block;
+      height: 3em;
+      margin: 0.2em;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .keyboardRowH1 {
+      height: 1.7em;
+      line-height: 1.4em;
   }
+  
+  .keyboardRowH3 {
+      height: 3.3em;
+  }
+  
+  .keyboardRow > * {
+    position: relative;
+    background: #333;
+    text-align: center;
+    color: #eee;
+    float: left;
+    border-radius: 0.3em;
+    margin: 0.2em;
+    padding: 0.2em;
+    width: 3.3em;
+    height: 100%;
+    box-sizing: border-box;
+    cursor: pointer;
+    border: 1px solid #444;
+    box-shadow: 0 0.2em 0 0.05em #222;
+    border-bottom-color: #555;
 }
+  
+  .keyboardRowH1 > div {
+      width: 3.5em;
+  }
+  
+  .keyboardRow > div[data-pressed],
+  .keyboardRow > div:active {
+      background: #141010;
+      color: #aaa;
+      position: relative;
+      top: 0.2em;
+      box-shadow: 0 0 0 0.05em black;
+  }
+  
+  .keyW3 {
+      width: 4.6em;
+  }
+  
+  .keyW4 {
+      width: 6em;
+  }
+  
+  .keyW5 {
+      width: 6.5em;
+  }
+  
+  .keyW6 {
+      width: 8.3em;
+  }
+  
+  .keySpace {
+      width: 18em;
+  }
+  
+  
+  
+  .keyLetter {
+      line-height: 2.8em;
+  }
+  
+  .keyBottomLeft > * {
+      position: absolute;
+      text-align: left;
+      bottom: 0.4em;
+      left: 0.4em;
+  }
+  
+  .keyBottomRight > * {
+      position: absolute;
+      text-align: right;
+      bottom: 0.4em;
+      right: 0.4em;
+  }
+  
+  .key-F > * {
+      font-size: 0.6em;
+      line-height: 1em;
+      padding-top: 1.2em;
+      padding-right: 0.2em;
+      text-align: right;
+      float: right;
+  }
+  
+  .keyWord > * {
+      font-size: 0.8em;
+  }
+  
+  .keyArrowTall > *,
+  .keyArrow > * {
+      font-size: 0.5em;
+      line-height: 3em;
+  }
+  
+  .keyArrow {
+      height: 1.8em;
+      margin-top: 1.7em;
+      line-height: 0.5em;
+  }
+  
+  .keyArrowTall > * {
+      padding-top: 0.2em;
+  }
+  
+  .keyboard > .keyboardRow {
+      text-align: center;
+  }
+
+  /* @media only screen and (max-width: 768px) {
+    .material-symbols-outlined {
+      margin-left: 0;
+    }
+  } */
+  
+  @media screen and (max-width: 600px) and (min-width: 240px) {
+    .keyboardRow {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  
+  
+    .form {
+      height: auto;
+      min-height: 470px;
+    }
+  }
