--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@ body {
     -webkit-transition: all 0.1s ease-in-out;
     -moz-transition: all 0.1s ease-in-out;
     -o-transition: all 0.1s ease-in-out;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .key-empty {
