--- a/src/App.css
+++ b/src/App.css
@@ -154,11 +154,10 @@ i.underscore {
     0 40px 77px 0 rgba(0, 0, 0, 0.22);
 }
 .row {
-  display: grid;
-  grid-template-columns: auto 0.2fr 0.2fr;
-  grid-gap: 25px;
-  padding: 5px;
-  margin-top: 5px;
+  display: flex;
+
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .lock1 {
@@ -168,19 +167,10 @@ i.underscore {
   margin-right: 107px;
 }
 
-.group,
-.mini-group {
+.group {
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-start;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-}
-
-.mini-group {
-  margin-left: 28px;
-}
-
-.right {
-  display: flex;
-  justify-content: flex-start;
+  gap: 10px;
 }
